--- a/MySop/MyShop.DataAcces.SQL/MyShop.DataAcces.SQL.csproj
+++ b/MySop/MyShop.DataAcces.SQL/MyShop.DataAcces.SQL.csproj
@@ -52,6 +52,10 @@
     <Compile Include="Migrations\201712191818165_Initial.Designer.cs">
       <DependentUpon>201712191818165_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712221625157_AddBasket.cs" />
+    <Compile Include="Migrations\201712221625157_AddBasket.Designer.cs">
+      <DependentUpon>201712221625157_AddBasket.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -69,6 +73,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201712191818165_Initial.resx">
       <DependentUpon>201712191818165_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712221625157_AddBasket.resx">
+      <DependentUpon>201712221625157_AddBasket.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
